[tool.poetry]
name = "autogen-simple-agents"
version = "0.1.0"
description = ""
authors = ["Karl Behrens <karlbehrensg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyautogen = "^0.1.10"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
